kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perth-transport-map
  labels:
    shared-gateway-access: "true"
