kubernetes/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perth-transport-map-api
  namespace: perth-transport-map
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: perth-transport-map-api
  replicas: 2
  template:
    metadata:
      labels:
        app: perth-transport-map-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: perth-transport-map-api
              topologyKey: kubernetes.io/hostname
      containers:
        - name: perth-transport-map-api
          image: ghcr.io/accurate0/perth-transport-map-api:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/status/health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8000
