kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perth-transport-map
  namespace: perth-transport-map
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: perth-transport-map
  replicas: 1
  template:
    metadata:
      labels:
        app: perth-transport-map
    spec:
      containers:
        - name: perth-transport-map-api
          image: ghcr.io/accurate0/perth-transport-map-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

        - name: perth-transport-map-worker
          image: ghcr.io/accurate0/perth-transport-map-worker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001

        - name: perth-transport-map-web
          image: ghcr.io/accurate0/perth-transport-map-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
