kubernetes/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perth-transport-map-worker
  namespace: perth-transport-map
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: perth-transport-map-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: perth-transport-map-worker
    spec:
      containers:
        - name: perth-transport-map-worker
          image: ghcr.io/accurate0/perth-transport-map-worker:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/status/health
              port: 8001
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8001
