kubernetes/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perth-transport-map-api
  namespace: perth-transport-map
spec:
  selector:
    app: perth-transport-map-api
  ports:
    - name: api
      protocol: TCP
      port: 8000
      targetPort: 8000
