kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perth-transport-map
  namespace: perth-transport-map
spec:
  selector:
    app: perth-transport-map
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: worker
      protocol: TCP
      port: 8001
      targetPort: 8001
    - name: api
      protocol: TCP
      port: 8000
      targetPort: 8000
