kubernetes/worker.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perth-transport-map-worker
  namespace: perth-transport-map
spec:
  selector:
    app: perth-transport-map-worker
  ports:
    - name: worker
      protocol: TCP
      port: 8001
      targetPort: 8001
