kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perth-transport-map-api
  namespace: perth-transport-map
spec:
  hostnames:
    - api.perthtransport.xyz
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: perth-transport-map-api
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perth-transport-map
  namespace: perth-transport-map
spec:
  hostnames:
    - perthtransport.xyz
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: perth-transport-map-web
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
